<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">toroCam</string>
    <string name="action_settings">Settings</string>
    <string name="timelapse">Timelapse</string>
    <string name="light_trigger">Light Trigger </string>
    <string name="sound_trigger">Sound Trigger </string>
    <string name="title_activity_shutter_release">Shutter Release</string>
    <string name="delay">Time Delay: </string>
    <string name="capture">Capture</string>
    <string name="delayVal"> Deley Value</string>
    <string name="delayInt"></string>
    <string name="title_activity_timelapse">Timelapse</string>
    <string name="hello_world">Hello world!</string>
    <string name="shots">Shots</string>
    <string name="zero">0</string>

    <string-array name="timeArray">
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
    </string-array>
    <string-array name="cameraArray">
        <item>Canon</item>
        <item>Nikon</item>
        <item>Olympus</item>
    </string-array>
    <string-array name="optionsCheckboxes">
        <item>Advanced Functions</item>
    </string-array>

    <string name="title_activity_shake_trigger">Shake Trigger</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="title_activity_light_trigger">LightTrigger</string>
    <string name="bulbFlash">Bulb Flash</string>
    <string name="multiplier">Multiplier</string>
    <string name="title_activity_sound_trigger">SoundTrigger</string>
    <string name="title_activity_dev_link">DevLink</string>
    <string name="devlink">No device set up</string>
    <string name="connect">Device Options</string>
    <string name="title_activity_launch">Launch</string>
    <string name="title_activity_blue_control">BlueControl</string>
    <string name="h">H</string>
    <string name="l">L</string>
    <string name="kill">Kill</string>
    <string name="debug_controls">Debug Controls</string>
    <string name="todo_device_must_be_connected_before_entering_activities_press_h_or_l_">TODO: MainActivity does not rebind BT service with onCreate like other activities</string>
    <string name="recallob">Recalibrate sensors</string>
    <string name="driptrig_">DripTrig™ </string>
    <string name="title_activity_drip_trig">DripTrig</string>
    <string name="sevsitivity">Sevsitivity</string>
    <string name="ldr_laser">LDR/Laser</string>
    <string name="mic">Mic</string>
    <string name="drip_length_size">Drip Length/Size</string>
    <string name="flash_delay">Flash Delay</string>
    <string name="drip_no_">Drip No.</string>
    <string name="delay_betweem_drips">Delay betweem drips</string>
    <string name="title_activity_flat_home">FlatHome</string>
    <string name="title_activity_hdrlapse">HDRLapse</string>
    <string name="hdr_timelapse">HDR Timelapse </string>
    <string name="s1_length">S1 Length</string>
    <string name="s2_length">S2 Length</string>
    <string name="s3_length">S3 Length</string>
    <string name="smartshutter">toroCam</string>
    <string name="simple_shoot">Simple Shoot</string>
    <string name="todo">TODO</string>
    <string name="title_activity_setup_one">SetupOne</string>
    <string name="title_activity_setup_two">SetupTwo</string>
    <string name="i_have_a_smartbox">I have a SmartBox</string>
    <string name="welcome_to">Welcome to</string>
    <string name="skip_just_browsing">Skip -  Just Browsing</string>
    <string name="helvetica_">Helvetica?</string>
    <string name="select_your_device">Select your device</string>
    <string name="title_activity_setup_three">SetupThree</string>
    <string name="just_a_minute_">Just a minute...</string>
    <string name="oops_">Oops!</string>
    <string name="there_was_a_problem_with_bluetooth_nis_your_smartshutter_turned_on_">There was a problem with Bluetooth! \n Is your SmartShutter turned on?</string>
    <string name="try_again">Try Again</string>
    <string name="help">Help</string>
    <string name="retry">Retry</string>
    <string name="troubleshoot">Troubleshoot</string>
    <string name="connecting_">Connecting...</string>
    <string name="title_activity_flat_settings">FlatSettings</string>
    <string name="timelapse_mode">Timelapse Mode</string>
    <string name="title_activity_servo_timelapse">ServoTimelapse</string>
    <string name="start_x">Start X</string>
    <string name="zeroms">0 ms</string>
    <string name="start_y">Start Y</string>
    <string name="end_y">End Y</string>
    <string name="end_x">End X</string>
    <string name="delServoTitle">Delay</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="_0_0_seconds">0.0 seconds</string>
    <string name="_0_0x">0.0x</string>
    <string name="persistant">Persistant</string>
    <string name="title_activity_camera_one">CameraOne</string>
    <string name="title_activity_camera_view">CameraView</string>

</resources>
