<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
  
  <RelativeLayout
      android:id="@+id/delayValue"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/sensitivityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/multiplierSeek"
        android:layout_below="@+id/LightDelay"
        android:layout_marginTop="26dp"
        android:text="@string/multiplier"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/multiplierSeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LightDelay"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sensitivityTextView"
        android:max="200" />

    <SeekBar
        android:id="@+id/LightDelay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/devLink" />

    <CheckBox
        android:id="@+id/bulbCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/multiplierSeek"
        android:layout_below="@+id/multiplierSeek"
        android:layout_marginTop="26dp"
        android:text="@string/bulbFlash" />

    <TextView
        android:id="@+id/timeDelayVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/LightDelay"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/multiplierVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/multiplierSeek"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="Recal"
        android:text="@string/recallob"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/s1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/smartshutter"
        android:textColor="#3B97D3"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/devLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LightDelay"
        android:layout_below="@+id/s1Text"
        android:text="@string/delay"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/CaptureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bulbCheck"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:onClick="CaptureClick"
        android:text="@string/capture"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/chkPersistant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/bulbCheck"
        android:layout_below="@+id/bulbCheck"
        android:text="CheckBox" />

</RelativeLayout>
</ScrollView>