<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LightTrigger" >

    <TextView
        android:id="@+id/devLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LightDelay"
        android:layout_alignParentTop="true"
        android:text="@string/delay"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/multiplierSeek"
        android:layout_below="@+id/LightDelay"
        android:layout_marginTop="26dp"
        android:text="@string/multiplier"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/multiplierSeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LightDelay"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:max="200" />

    <SeekBar
        android:id="@+id/LightDelay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/devLink" />

    <CheckBox
        android:id="@+id/bulbCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/multiplierSeek"
        android:layout_below="@+id/multiplierSeek"
        android:layout_marginTop="26dp"
        android:text="@string/bulbFlash" />

    <Button
        android:id="@+id/CaptureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bulbCheck"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="CaptureClick"
        android:text="@string/capture" />

    <TextView
        android:id="@+id/timeDelayVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/LightDelay"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/multiplierVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/multiplierSeek"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

<<<<<<< HEAD
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bulbCheck"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/recallob"
        android:onClick="Recal" />

=======
>>>>>>> 85e50f9ac3bc51bb59d8d09786791212971d2e10
</RelativeLayout>