<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
  
  <RelativeLayout
      android:id="@+id/delayValue"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin" >

      <SeekBar
          android:id="@+id/startYseek"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_below="@+id/ShotsView"
          android:max="1000" />

      <TextView
          android:id="@+id/ShotsView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/startXseek"
          android:text="@string/start_y" />

      <TextView
          android:id="@+id/startYvalue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/startYseek"
          android:layout_below="@+id/startYseek"
          android:text="@string/zero"
          android:textAppearance="?android:attr/textAppearanceSmall" />

      <TextView
          android:id="@+id/s1Text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_centerHorizontal="true"
          android:text="@string/smartshutter"
          android:textColor="#3B97D3"
          android:textSize="40sp" />

      <SeekBar
          android:id="@+id/startXseek"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/startXtitle"
          android:max="59" />

      <TextView
          android:id="@+id/startXtitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/startXseek"
          android:layout_below="@+id/s1Text"
          android:text="@string/start_x" />

      <TextView
          android:id="@+id/startXvalue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/startXseek"
          android:layout_below="@+id/startXseek"
          android:text="@string/zero"
          android:textAppearance="?android:attr/textAppearanceSmall" />

      <SeekBar
          android:id="@+id/endXseek"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_below="@+id/startYvalue"
          android:layout_marginTop="16dp"
          android:max="1000" />

      <TextView
          android:id="@+id/endXvalue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/startYvalue"
          android:layout_centerVertical="true"
          android:text="@string/zero"
          android:textAppearance="?android:attr/textAppearanceSmall" />

      <TextView
          android:id="@+id/endXtitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/endYseek"
          android:layout_below="@+id/startYvalue"
          android:text="@string/end_x" />

      <SeekBar
          android:id="@+id/endYseek"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_below="@+id/endXvalue"
          android:layout_marginTop="20dp"
          android:max="1000" />

      <TextView
          android:id="@+id/endYtitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/endYseek"
          android:layout_below="@+id/endXvalue"
          android:text="@string/end_y" />

      <TextView
          android:id="@+id/endYvalue"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignRight="@+id/endYseek"
          android:layout_below="@+id/endYseek"
          android:text="@string/zero"
          android:textAppearance="?android:attr/textAppearanceSmall" />

      <ToggleButton
          android:id="@+id/servToggle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/endYvalue"
          android:layout_centerHorizontal="true"
          android:minWidth="80dp"
          android:onClick="onToggleClicked"
          android:text="@string/zero"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="#FFFFFF"
          android:textOff="@string/start"
          android:textOn="@string/stop" />

  </RelativeLayout>
         
     </ScrollView>