<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
  
  <RelativeLayout
      android:id="@+id/delayValue"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin" >

      <RelativeLayout
          android:id="@+id/headerLayout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" >

          <ImageView
              android:id="@+id/imageView4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentLeft="true"
              android:src="@drawable/ic_action_backaction"
              android:onClick="backClick" />

          <TextView
              android:id="@+id/headerTitle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerInParent="true"
              android:text="@string/smartshutter"
              android:textColor="#3B97D3"
              android:textSize="40sp" />

          <ImageView
              android:id="@+id/imageView1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentRight="true"
              android:onClick="optionsClicked"
              android:src="@drawable/ic_launcher_menu" />
      </RelativeLayout>

    <SeekBar
        android:id="@+id/sensitivitySlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sensitivityText"
        android:max="100" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sensitivitySlider"
        android:layout_below="@+id/sensitivitySlider"
        android:layout_marginTop="14dp" >

        <RadioButton
            android:id="@+id/LDRradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ldr_laser" />

        <RadioButton
            android:id="@+id/MICradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mic" />
    </RadioGroup>

    <TextView
        android:id="@+id/dlengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/radioGroup1"
        android:text="@string/drip_length_size"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/dlengthSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dlengthText"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dlengthText"
        android:max="500" />

    <TextView
        android:id="@+id/sensitivityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup1"
        android:layout_alignRight="@+id/sensitivitySlider"
        android:layout_marginRight="16dp"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/dlengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dlengthSlider"
        android:layout_alignLeft="@+id/sensitivityTextView"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/dnoSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dlengthSlider"
        android:layout_below="@+id/dlengthSlider"
        android:layout_marginTop="18dp" 
        android:max="5"/>

    <TextView
        android:id="@+id/dnoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dnoSlider"
        android:layout_below="@+id/dlengthSlider"
        android:text="@string/drip_no_"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/dnoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dnoSlider"
        android:layout_alignLeft="@+id/dlengthTextView"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/dbdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dnoSlider"
        android:layout_below="@+id/dnoSlider"
        android:text="@string/delay_betweem_drips"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/dbdSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dbdText"
        android:layout_below="@+id/dbdText"
        android:max="500" />

    <TextView
        android:id="@+id/dbdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dbdSlider"
        android:layout_alignLeft="@+id/dnoTextView"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/flashText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dbdSlider"
        android:layout_below="@+id/dbdSlider"
        android:text="@string/flash_delay"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/flashSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/flashText"
        android:layout_below="@+id/flashText"
        android:max="500" />

    <TextView
        android:id="@+id/flashTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/flashSlider"
        android:layout_alignLeft="@+id/dbdTextView"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flashSlider"
        android:layout_centerHorizontal="true"
        android:text="@string/capture"
        android:onClick="captureClick"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/sensitivityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerLayout"
        android:layout_alignLeft="@+id/sensitivitySlider"
        android:text="@string/sevsitivity"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="Recal"
        android:text="@string/recallob"
        android:textColor="#FFFFFF" />

</RelativeLayout>
</ScrollView>